examples/spork/failing/conflicting_method_visibility/ExpectedIdeally.java
class Cls {
<<<<<<< LEFT
    public void method() {}
||||||| BASE
    void method() {}
=======
    private void method() {}
>>>>>>> RIGHT
}
